--- a/templates/about.html
+++ b/templates/about.html
@@ -3,10 +3,12 @@
 <head>
  <meta charset="UTF-8">
  <title>My Website - About</title>
+ <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}" />
 </head>
 <body>
  <h1>Kevin McBean</h1>
  <p>I'm 21 years old. I study computer science at UWI and I currently teach kids robotics for work.
  I like cars and food. My favourite colour is green, favourite car is a Subaru Impreza WRX STI and favourite food is pepper shrimp.</p>
+ <img src="{{ url_for('static', filename='subaru.jpg') }}" />
 </body>
 </html>
